Fix for form placeholders on IE.

--- a/app/stylesheets/_shared.sass
+++ b/app/stylesheets/_shared.sass
@@ -381,8 +381,17 @@ section#the_contacts
       
       form
         p
+          position: relative
           margin-bottom: 10px
           width: 100%
+          
+        label.placeholder
+          display: block
+          position: absolute
+          width: 590px
+          height: 26px
+          padding: 5px
+          font-size: 16px
           
         input,
         textarea
