--- a/app/stylesheets/blue.sass
+++ b/app/stylesheets/blue.sass
@@ -117,6 +117,9 @@ section#the_contacts
           
     div.right
       form
+        label.placeholder
+          color: $blue
+          
         input,
         textarea
           background-color: $white
