--- a/app/stylesheets/hybrid.sass
+++ b/app/stylesheets/hybrid.sass
@@ -119,6 +119,9 @@ section#the_contacts
             
     div.right
       form
+        label.placeholder
+          color: $blue
+          
         input,
         textarea
           background-color: $white
